[tool.poetry]
name = "pydprobe"
version = "0.1.0"
description = ""
authors = ["Tim Misiak <tim.misiak+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8"
pytest = ">7.3.1"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
